--- a/index.html
+++ b/index.html
@@ -1,41 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>About Me</title>
-  <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Raleway:100,500,600,800" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Itim" rel="stylesheet">  
-  <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Angel's CIT82 Repo</title>
 </head>
 <body>
-
-  <div class="header">
-    <h1>Angel Rivera</h1>
-  </div>
-
-  <div class="young">
-    <h3>Young Guy, Old Soul</h3>
-    <p>I'm 18 years old and want to start living life to the fullest. As stated above, I love anything that makes me nostalgic. Someties I feel like I was born in the wrong generation, but what can you do. Hopefully one day, I will be able to travel around the world to experience all the different flavors in this world.</p>
-  <br>
-      <div class="spectrum">
-        <div class="hobbies">
-          <h4>Hobbies</h4>
-          <p>I like to read a lot. Some of my favorite books are: Walden, The Kite Runner, and Island of the Blue Dolphins. Another thing I like to do is plant and make gardens. </p>
-        </div>
-        <div class="light">
-          <h4>Occupation</h4>
-          <p>Currently I am a student at Fresno City College, studying to become a web developer. To earn mone to sustain myself right now, I do little jobs here and there. Currently looking for a job to stay with for a while.</p>
-        </div>
-        <div class="city">
-          <h4>Favorites</h4>
-          <p>Favorite City: San Francisco</p>
-          <p>Favorite Style of Food: Indian</p>
-          <p>Favorite Music Artist: Lana Del Rey</p>
-        </div>
-      </div>
-  </div>
-
-  <footer>
-    <p>Design by Code Academy, plus aided by Rio Waller :)</p>
-  </footer>
+   <h1>Angel Rivera</h1>
+   <h2>HELLO WORLD</h2>
 </body>
 </html>
