--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </main>
 <nav role="navigation">
     <ul>
-      <li><a href="hobbies.htm" title="Hobbies"></a>Hobbies</li>
+      <li><a href="hobbies.htm" title="Hobbies">Hobbies</a></li>
       <li><a href="music.htm" title="Favorite Songs">Favorite Songs</a></li>
       <li><a href="books.htm" title="Favorite Books">Favorite Books</a></li>
     </ul>
