updating Codealong.htm

--- a/Codealong.htm
+++ b/Codealong.htm
@@ -8,9 +8,22 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="jumbotron">
-    <h1>Bootstrap Code Along</h1>
+    <!-- TYPOGRAPHY -->
+    <div class="container">
+    <h1 class="page-header">Bootstrap Cheat sheet <small>secondary text</small></h1>
+    <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste eum quasi, provident mollitia repudiandae deleniti eveniet consequuntur tempore nulla delectus, voluptate odio odit corrupti hic quaerat cupiditate. Saepe, vitae. Voluptatum!</p>
+    <p><mark>Lorem ipsum dolor sit amet consectetur adipisicing elit.</mark> Ad necessitatibus repellat accusamus reiciendis <u>beatae eaque voluptas consectetur minus</u>, quod quibusdam ab! Laboriosam debitis, <del> nisi laborum iusto fugiat laudantium soluta!</del></p>
+
+    <hr>
+
+<!-- ALIGNMENT -->
+<p class="text-left text-lowercase">Left aligned text</p>
+<p class="text-center text-uppercase">center aligned text</p>
+<p class="text-right text-capitalize">right aligned text</p>
+<p class="text-justify">justified aligned text</p>
+<p class="text-nowrap">no wrap text</p>
     </div>
+    
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
