--- a/Codealong.htm
+++ b/Codealong.htm
@@ -22,8 +22,67 @@
 <p class="text-right text-capitalize">right aligned text</p>
 <p class="text-justify">justified aligned text</p>
 <p class="text-nowrap">no wrap text</p>
+
+
+<!-- QUICK FLOATS -->
+<div class="pull-right">div floated to the right</div>
+<div class="pull-left">div floated to the left</div>
+
+
+<!-- CLEAR FLOAT -->
+<div class="clearfix"></div>
+<hr>
+
+<!-- BLOCKQUOTE -->
+<blockquote class="blockquote-reverse">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores dolore commodi obcaecati. Distinctio vel, fugit laudantium ullam corporis odit reiciendis est temporibus, cupiditate obcaecati nostrum debitis quas laborum minima facere.</p>
+    <footer>Quote by <cite title="John Doe">John Doe</cite></footer>
+</blockquote>
+
+<hr>
+
+
+<!-- LISTS -->
+<ul class="list-unstyled">
+    <li>item 1</li>
+    <li>item 2</li>
+    <li>item 3</li>
+    <li>item 4</li>
+</ul>
+<ul class="list-inline">
+        <li>item 1</li>
+        <li>item 2</li>
+        <li>item 3</li>
+        <li>item 4</li>
+    </ul>
+
+    <!-- CODE -->
+    <code>&lt;h1&gt;Heading Text&lt;/h1&gt;</code>
+    <br>
+    Change directory with <kbd>cd</kbd>
+    <br>
+    To edit settings, press <kbd><kbd>ctrl</kbd> + <kbd>,</kbd></kbd>
+
+    <hr>
+
+    <!-- CONTEXTUAL COLORS -->
+    <P class="text-primary">Hello World</P>
+    <P class="text-success">Hello World</P>
+    <P class="text-info">Hello World</P>
+    <P class="text-warning">Hello World</P>
+    <P class="text-danger">Hello World</P>
+    <P class="text-muted">Hello World</P>
+
+    <!-- CONTEXTUAL BACKGROUND COLORS -->
+    <P class="bg-primary">Hello World</P>
+    <P class="bg-success">Hello World</P>
+    <P class="bg-info">Hello World</P>
+    <P class="bg-warning">Hello World</P>
+    <P class="bg-danger">Hello World</P>
+    <P class="bg-muted">Hello World</P>
     </div>
     
+    <div style="height:400px"></div>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
