--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>Home Page</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -34,35 +34,57 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="index.html">CIT 82</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <div class="dropdown">
-                            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                              About
-                              <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                              <li><a href="#">Action</a></li>
-                              <li><a href="#">Another action</a></li>
-                              <li><a href="#">Something else here</a></li>
-                              <li role="separator" class="divider"></li>
-                              <li><a href="#">Separated link</a></li>
-                            </ul>
-                          </div>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Protocols <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                          <li><a href="sub-pages/protocols/https.htm">Current Topics - HTTPS</a></li>
+                          <li><a href="sub-pages/protocols/ftp.htm">Current Topics - Learn MORE about FTP!</a></li>
+                          <li><a href="sub-pages/protocols/semantic-versioning.htm">Current Topics - Semantic Versioning</a></li>
+                          <li><a href="sub-pages/protocols/utf8.htm">Current Topic - UTF8</a></li>
+                        </ul>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Humans on the web <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                          <li><a href="sub-pages/human-web/netmap.htm">Hands-On - Map Your Network</a></li>
+                          <li><a href="sub-pages/human-web/AI.htm">Lectures - Google Gets Aggressive in A.I.</a></li>
+                          <li><a href="sub-pages/human-web/darkweb.htm">Current Topics - Dark Web</a></li>
+                          <li><a href="sub-pages/human-web/themachine.htm">Current Topics - Web 2.0 ... The Machine is Us/ing US</a></li>
+
+                        </ul>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tools <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                          <li><a href="sub-pages/tools/chromedevtools.htm">Hands-On - Chrome DevTools</a></li>
+                          <li><a href="sub-pages/tools/editor.htm">Hands-On - Select your Editor</a></li>
+                          <li><a href="sub-pages/tools/git.htm">Hands-On - Git for your OS</a></li>
+                          <li><a href="sub-pages/tools/github.htm">Hands-On - Get Started with GitHub and GitHub Pages</a></li>
+                          </ul>
                     </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Web Development <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                          <li><a href="sub-pages/webdev/htmltraining.htm">Lecture - HTML Essential Training Part 1, 2</a></li>
+                          <li><a href="sub-pages/webdev/webtech.htm">Lecture - Web Technology Fundamentals P1, 2</a></li>
+                          <li><a href="sub-pages/webdev/webdev.htm">Becoming a Web Developer: Full Stack vs Front</a></li>
+                          <li><a href="sub-pages/webdev/framework.htm">Current Topics - Front-End Frameworks</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Designing Websites <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                          <li><a href="sub-pages/design/apps.htm">Current Topics -Web Sites vs. Web Apps</a></li>
+                          <li><a href="sub-pages/design/seo.htm">Lecture - SEO for ecommerce Part 1, 2</a></li>
+                          <li><a href="sub-pages/design/optimages.htm">Current Topics - Optimizing images examples</a></li>
+                          <li><a href="sub-pages/design/uiux.htm">Current Topics - UI/UX</a></li>
+                        </ul>
                     </li>
                 </ul>
             </div>
