--- a/sub-pages/design/apps.htm
+++ b/sub-pages/design/apps.htm
@@ -13,15 +13,15 @@
     <title>Home Page</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="../../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
     <!-- Theme CSS -->
-    <link href="css/creative.min.css" rel="stylesheet">
+    <link href="../../css/creative.min.css" rel="stylesheet">
 
 </head>
 
@@ -34,7 +34,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="index.html">CIT 82</a>
+                <a class="navbar-brand page-scroll" href="../../index.html">CIT 82</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -43,47 +43,47 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Protocols <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="sub-pages/protocols/https.htm">Current Topics - HTTPS</a></li>
-                          <li><a href="sub-pages/protocols/ftp.htm">Current Topics - Learn MORE about FTP!</a></li>
-                          <li><a href="sub-pages/protocols/semantic-versioning.htm">Current Topics - Semantic Versioning</a></li>
-                          <li><a href="sub-pages/protocols/utf8.htm">Current Topic - UTF8</a></li>
+                          <li><a href="../protocols/https.htm">Current Topics - HTTPS</a></li>
+                          <li><a href="../protocols/ftp.htm">Current Topics - Learn MORE about FTP!</a></li>
+                          <li><a href="../protocols/semantic-versioning.htm">Current Topics - Semantic Versioning</a></li>
+                          <li><a href="../protocols/utf8.htm">Current Topic - UTF8</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Humans on the web <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="sub-pages/human-web/netmap.htm">Hands-On - Map Your Network</a></li>
-                          <li><a href="sub-pages/human-web/AI.htm">Lectures - Google Gets Aggressive in A.I.</a></li>
-                          <li><a href="sub-pages/human-web/darkweb.htm">Current Topics - Dark Web</a></li>
-                          <li><a href="sub-pages/human-web/themachine.htm">Current Topics - Web 2.0 ... The Machine is Us/ing US</a></li>
+                          <li><a href="../human-web/netmap.htm">Hands-On - Map Your Network</a></li>
+                          <li><a href="../human-web/AI.htm">Lectures - Google Gets Aggressive in A.I.</a></li>
+                          <li><a href="../human-web/darkweb.htm">Current Topics - Dark Web</a></li>
+                          <li><a href="../human-web/themachine.htm">Current Topics - Web 2.0 ... The Machine is Us/ing US</a></li>
 
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tools <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="sub-pages/tools/chromedevtools.htm">Hands-On - Chrome DevTools</a></li>
-                          <li><a href="sub-pages/tools/editor.htm">Hands-On - Select your Editor</a></li>
-                          <li><a href="sub-pages/tools/git.htm">Hands-On - Git for your OS</a></li>
-                          <li><a href="sub-pages/tools/github.htm">Hands-On - Get Started with GitHub and GitHub Pages</a></li>
+                          <li><a href="../tools/chromedevtools.htm">Hands-On - Chrome DevTools</a></li>
+                          <li><a href="../tools/editor.htm">Hands-On - Select your Editor</a></li>
+                          <li><a href="../tools/git.htm">Hands-On - Git for your OS</a></li>
+                          <li><a href="../tools/github.htm">Hands-On - Get Started with GitHub and GitHub Pages</a></li>
                           </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Web Development <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="sub-pages/webdev/htmltraining.htm">Lecture - HTML Essential Training Part 1, 2</a></li>
-                          <li><a href="sub-pages/webdev/webtech.htm">Lecture - Web Technology Fundamentals P1, 2</a></li>
-                          <li><a href="sub-pages/webdev/webdev.htm">Becoming a Web Developer: Full Stack vs Front</a></li>
-                          <li><a href="sub-pages/webdev/framework.htm">Current Topics - Front-End Frameworks</a></li>
+                          <li><a href="../webdev/htmltraining.htm">Lecture - HTML Essential Training Part 1, 2</a></li>
+                          <li><a href="../webdev/webtech.htm">Lecture - Web Technology Fundamentals P1, 2</a></li>
+                          <li><a href="../webdev/webdev.htm">Becoming a Web Developer: Full Stack vs Front</a></li>
+                          <li><a href="../webdev/framework.htm">Current Topics - Front-End Frameworks</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Designing Websites <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                          <li><a href="sub-pages/design/apps.htm">Current Topics -Web Sites vs. Web Apps</a></li>
-                          <li><a href="sub-pages/design/seo.htm">Lecture - SEO for ecommerce Part 1, 2</a></li>
-                          <li><a href="sub-pages/design/optimages.htm">Current Topics - Optimizing images examples</a></li>
-                          <li><a href="sub-pages/design/uiux.htm">Current Topics - UI/UX</a></li>
+                          <li><a href="../design/apps.htm">Current Topics -Web Sites vs. Web Apps</a></li>
+                          <li><a href="../design/seo.htm">Lecture - SEO for ecommerce Part 1, 2</a></li>
+                          <li><a href="../design/optimages.htm">Current Topics - Optimizing images examples</a></li>
+                          <li><a href="../design/uiux.htm">Current Topics - UI/UX</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -115,61 +115,18 @@
         </div>
     </section>
 
-    <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
-                    <hr class="primary">
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- jQuery -->
-    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="../../vendor/jquery/jquery.min.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../../vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
+    <script src="../../vendor/scrollreveal/scrollreveal.min.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="js/creative.min.js"></script>
+    <script src="../../js/creative.min.js"></script>
 
 </body>
 
