--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@
         </div>
     </section>
 
+    <div class="container text-center ">
+        <footer>
+            Made with love by Angel :-]
+        </footer>
+    </div>
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
 
