--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
     <div class="container text-center ">
         <footer>
-            Made with love by Angel :-]
+            <p>Made with love by Angel :-]</p>
         </footer>
     </div>
     <!-- jQuery -->
