--- a/sub-pages/design/apps.htm
+++ b/sub-pages/design/apps.htm
@@ -115,6 +115,14 @@
         </div>
     </section>
 
+    <br>
+
+    <div class="container text-center ">
+         <footer>
+            <p>Made with love by Angel :-]</p>
+        </footer>
+    </div>
+
     <!-- jQuery -->
     <script src="../../vendor/jquery/jquery.min.js"></script>
 
