updated content on index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="Home page of website">
     <meta name="author" content="">
 
     <title>Home Page</title>
@@ -96,9 +96,10 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1 id="homeHeading">Welcome to my CIT 82 Project 0</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p class="lead">Class Description:</p>
+                <p>Survey of contemporary web technologies in authoring, distributing and browsing. Topics include: web servers, scripting, protocols, E-Commerce, information architecture, website traffic analysis, search engine optimization, and website usability.</p>
             </div>
         </div>
     </header>
@@ -107,9 +108,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Overview of what I leared:</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">This class really opened my eyes as far as the different possibility's and ways of doing things in the web development industry. I liked it since i'm pretty inexperienced with web design and the different technologies involved with it and that make development better. And as the name of this course implies, there was an emphasis for technology. I mean, the web basically can't exist without the use of it. The main thing about this course that impacted me is that it wasn't really focused on just one set of tools or gadgets, but rather it covered and introduced us to a whole variety of things that is involved with the web. At first, I was a bit overwhelmed, but I soon realized that it's good to see all the things I could learn and add in my skill set. And of course I can't learn it all at once, but I can make it a goal to learn them eventually so that I can become a well rounded developer. This class was very enjoyable and is a good way to get one that is starting to look into web development prepared for his or her future.</p>
                 </div>
             </div>
         </div>
@@ -119,7 +120,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
+                    <h2 class="section-heading">About My Catagories</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -128,31 +129,34 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                        <h3>Protocols</h3>
+                        <p class="text-muted">This section is about the different protocols that govern the internet and the interactions between different machines.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                        <h3>Humans On the Web</h3>
+                        <p class="text-muted">This one has content related to how we use the web and how we connect to it. It has my favorite video that we saw in this class.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+                        <h3>Tools</h3>
+                        <p class="text-muted">As the name suggests, this catagory has content that shows the different tools out there for developers to use that make their lives so much easier.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+                        <h3>Web Development</h3>
+                        <p class="text-muted">This section has information that taught me the basics about HTML, Ecommerce, and other useful skill needed.</p>
                     </div>
+                </div>
+                <br>
+                <div class="col-3 col-6 text-center">
+                        <div class="service-box">
+                            <h3>Designing Websites</h3>
+                            <p class="text-muted">Last but not least, this one has topics like the difference between websites and web apps, what UI and UX are, etc!</p>
+                        </div>
                 </div>
             </div>
         </div>
