--- a/sub-pages/design/apps.htm
+++ b/sub-pages/design/apps.htm
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="This page is about my experience with learning the difference between web sites and web apps">
     <meta name="author" content="">
 
-    <title>Home Page</title>
+    <title>Current Topics -Web Sites vs. Web Apps</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,9 +96,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1 id="homeHeading">Current Topics -Web Sites vs. Web Apps</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>I was asked to look at a website about the difference between these 2 things and then describe it. Then I was asked if i had a site or an app that I wanted to build or make for someone, which is what the next paragraph is about.</p>
             </div>
         </div>
     </header>
@@ -107,9 +107,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Overview</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">Websites are more static, which basically means they aren't updated constantly. These platforms are made simply by HTML, CSS, and some JavaScript. They are relatively just there to show you some type of information, and that's it, they just stay like that. A good example is the website we just visited earlier. That site just informed us and that's it. It didn't do anything special. A web app on the other hand is much more interactive. It can take information that the user puts on there, or it can present information, like personalized information based on the information that you put down. These apps also run on the basic tools used for websites, but are probably a bit more heavy on the JavaScript, and also include one or more programming languages. Another good example of a web app is the platform we are using right now, Canvas.</p>
+                    <hr class="light">
+                    <p class="text-faded lead">Build it and they will come</p>
+                    <p class="text-faded">I took a web design class in high school. With that said, I had told my uncle that I was interested in web development and that I took that course. He is a business owner and he wanted to know if  I could build his business a website. I told him that I wasn't that experienced and that I had to get my technique down a little bit. So for the longest time he has been asking me to make one for him. So I think one of my first actual projects is going to be a site for his business. Plus he says he will pay me for it so that motivates me even more. Another app I think I might want to build is an app that would be able to coordinate and match clothing outfits based on color schemes and the latest fashion trends. It would be connected to databases that from different merchants to find the items you have in your closet, as well as databases containing color cordination and schemes, and be able to match an outfit for you. Its just an idea, and I don't even know if its possible, but ill look into it. </p>
                 </div>
             </div>
         </div>
