--- a/sub-pages/design/optimages.htm
+++ b/sub-pages/design/optimages.htm
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="This page talks about how I previously learned the different image file types and how to resize and compress them so they will be optimized for websites. Then I went ahead and did it myself.">
     <meta name="author" content="">
 
-    <title>Home Page</title>
+    <title>Current Topics - Optimizing images examples</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,9 +96,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1 id="homeHeading">Current Topics - Optimizing images examples</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>Earlier in the week for lecture, the class was given a video to look at on youtube, which talked about the different file types most used on the web and how to optimize them. Then Rio gave us a demonstration video of how she optomizes her videos. After, we had this assignment.</p>
             </div>
         </div>
     </header>
@@ -107,9 +107,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Overview</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">At first when starting to download my picture, google images told me that the picture was 1170 x 450, but when i actually downloaded it, it was much smaller. So i had to play around to see how i could get the stated picture resolution. I found out that i was saving the image straight from the google search in google images, which show the picture much smaller than what it is, so when i opened the picture in a new tab, it worked out just fine. After that incident, all went well. I got the picture which was originally 235,744 bytes and cropped it to be 82,722 bytes. I cropped the image using an app pre-installed in windows 8 and 10 to view pictures called Photos. It was easy to use and i didn't really have to go anywhere special. As stated earlier, the original size of the picture was 1170 x 450, but after it went to 555 x 450. I will try to implement it into the site and if it doesn't fit good, then i'll have to play with the sizes to get the right fit.</p>
                 </div>
             </div>
         </div>
