--- a/sub-pages/design/seo.htm
+++ b/sub-pages/design/seo.htm
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="This page is about me learning what SEO(search engine optimization) is and about how it affects ecommerce">
     <meta name="author" content="">
 
-    <title>Home Page</title>
+    <title>Lecture - SEO for ecommerce Part 1, 2</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,9 +96,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1 id="homeHeading">Lecture - SEO for ecommerce Part 1, 2</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>This assignment inclulded a lecture from Lynda.com about how to make good SEO's which means search engine opimization. It's mainly for Ecommerce puposes, but most of it was about making modifications on the pages html code themselves. These are my notes from that lecture.</p>
             </div>
         </div>
     </header>
@@ -107,7 +107,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Overview</h2>
                     <hr class="light">
                     <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
                 </div>
