modified this file

--- a/sub-pages/design/apps.htm
+++ b/sub-pages/design/apps.htm
@@ -113,6 +113,7 @@
                     <hr class="light">
                     <p class="text-faded lead">Build it and they will come</p>
                     <p class="text-faded">I took a web design class in high school. With that said, I had told my uncle that I was interested in web development and that I took that course. He is a business owner and he wanted to know if  I could build his business a website. I told him that I wasn't that experienced and that I had to get my technique down a little bit. So for the longest time he has been asking me to make one for him. So I think one of my first actual projects is going to be a site for his business. Plus he says he will pay me for it so that motivates me even more. Another app I think I might want to build is an app that would be able to coordinate and match clothing outfits based on color schemes and the latest fashion trends. It would be connected to databases that from different merchants to find the items you have in your closet, as well as databases containing color cordination and schemes, and be able to match an outfit for you. Its just an idea, and I don't even know if its possible, but ill look into it. </p>
+                    <img class="img-rounded" src="../../img/images/sitevsapp.png">
                 </div>
             </div>
         </div>
