--- a/sub-pages/design/uiux.htm
+++ b/sub-pages/design/uiux.htm
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="This page describes the difference between UI and UX.">
     <meta name="author" content="">
 
-    <title>Home Page</title>
+    <title>Current Topics - UI/UX</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -96,9 +96,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Favorite Source of Free Bootstrap Themes</h1>
+                <h1 id="homeHeading">Current Topics - UI/UX</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+                <p>We were given, as a class, 2 videos to watch about what UI(user interface) and UX(user experience) are and what it entails. After, we researched for more information on the topic that would help us to understand these terms better.</p>
             </div>
         </div>
     </header>
@@ -107,9 +107,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">Overview</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+                    <p class="text-faded">I have heard of UI and UX before, but not very much. So i started off researching what they each stood for. UI means user interface and its a form of design that really focuses on look and the layout of the product. Its the more artistic side of design. This is the type of design that i would more be interested in because I like to make things that look nice and pleasing to the eye. UX means user experience and is the side of design that focuses on the way the product feels. Its mainly for the analytical side of design. This one seems pretty cool as well but i'm not that analytical. I found this information on this <a href="https://www.fastcodesign.com/3032719/ui-ux-who-does-what-a-designers-guide-to-the-tech-industry">website</a>. It also gives the tools that designers in these fields might use and also talks about other different designer paths. I think its important for developers, especially web developers to at least understand the basic concepts of these designs since they can significantly help you to create awesome websites and apps. I really want to focus my skill on UI design, because like i said, im really more of an artistic type of person.</p>
+                    <img class="img-rounded" src="../../img/images/uivsux.jpg">
                 </div>
             </div>
         </div>
